# fundsp

./: .gitignore  CHANGES.md  Cargo.toml  FUTURE.md  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: beep.rs  file.rs  grain.rs  grain2.rs  keys.rs  live_adsr.rs  network.rs  optimize.rs  peek.rs  plot.rs  sequence.rs  type.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
src/: adsr.rs  audiocomponent.rs  audionode.rs  audiounit.rs  biquad.rs  biquad_bank.rs  buffer.rs  callback.rs  combinator.rs  convolve.rs  delay.rs  denormal.rs  dynamics.rs  effect.rs  envelope.rs  feedback.rs  fft.rs  filter.rs  fir.rs  follow.rs  frame.rs  gen.rs  generate.rs  granular.rs  graph.rs  hacker.rs  hacker32.rs  hacker_32.rs  lib.rs  lti.rs  math.rs  moog.rs  net.rs  noise.rs  oscillator.rs  oversample.rs  pan.rs  pattern.rs  prelude.rs  prelude32.rs  (+26 more)
tests/: basic.rs  dynamics.rs  filter.rs  test_basic.rs  test_dynamics.rs  test_flow.rs  test_follow.rs
