[package]
name = "fundsp"
description = "Audio processing and synthesis library."
keywords = ["dsp", "audio", "synthesizer", "sound", "wave"]
license = "MIT OR Apache-2.0"
version = "0.16.0"
authors = ["SamiPerttu <Sami.Perttu@gmail.com>"]
homepage = "https://github.com/SamiPerttu/fundsp"
repository = "https://github.com/SamiPerttu/fundsp"
readme = "README.md"
edition = "2021"

[dependencies]
generic-array = "0.14.7"
numeric-array = "0.5.2"
num-complex = "0.4.4"
rustfft = "6.1.0"
realfft = "3.3.0"
lazy_static = "1.4.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
rsor = "0.1.4"
duplicate = "1.0.0"
dyn-clone = "1.0.16"
symphonia = { version = "0.5.3", optional = true, features = ["all"] }
thingbuf = "0.1.4"
funutd = "0.12.1"

[features]
default = ["files"]
files = ["dep:symphonia"]

[dev-dependencies]
cpal = "0.15.2"
anyhow = "1.0.77"
plotters = "0.3.5"
criterion = "0.5.1"
midi-msg = "0.5.0"
midir = "0.9.1"
read_input = "0.8.6"
assert_no_alloc = "1.1.2"
eframe = "0.24.1"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "beep"
path = "examples/beep.rs"

[[example]]
name = "peek"
path = "examples/peek.rs"

[[example]]
name = "sequence"
path = "examples/sequence.rs"

[[example]]
name = "type"
path = "examples/type.rs"

[[example]]
name = "plot"
path = "examples/plot.rs"

[[example]]
name = "file"
path = "examples/file.rs"

[[example]]
name = "grain"
path = "examples/grain.rs"

[[example]]
name = "grain2"
path = "examples/grain2.rs"

[[example]]
name = "network"
path = "examples/network.rs"

[[example]]
name = "keys"
path = "examples/keys.rs"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
