[package]
name = "fundsp"
description = "Audio processing and synthesis library."
keywords = ["dsp", "audio", "synthesizer", "sound", "no_std"]
categories = ["multimedia::audio", "no-std"]
license = "MIT OR Apache-2.0"
version = "0.18.0"
authors = ["SamiPerttu <Sami.Perttu@gmail.com>"]
homepage = "https://github.com/SamiPerttu/fundsp"
repository = "https://github.com/SamiPerttu/fundsp"
readme = "README.md"
edition = "2021"

[dependencies]
generic-array = "0.14.7"
numeric-array = { version = "0.5.2", default-features = false }
dyn-clone = "1.0.17"
libm = "0.2.8"
wide = "0.7.24"
num-complex = { version = "0.4.6", default-features = false, features = ["libm"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }
hashbrown = "0.14.5"
microfft = { version = "0.6.0", features = ["size-32768"] }
funutd = { version = "0.16.0", default-features = false }
thingbuf = { version = "0.1.6", default-features = false, features = ["alloc"] }
once_cell = { version = "1.19.0", default-features = false, features = ["race", "alloc"] }
symphonia = { version = "0.5.4", optional = true, features = ["all"] }
no_denormals = "0.1.2"

[dev-dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
cpal = "0.15.3"
assert_no_alloc = "1.1.2"
eframe = "0.27.2"
plotters = "0.3.6"
midi-msg = "0.5.0"
midir = "0.9.1"
read_input = "0.8.6"
rayon = "1.10.0"

[features]
default = ["std", "files"]
std = []
files = ["dep:symphonia"]

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
